# ruuvi.firmware.c

./: .gitignore  .gitmodules  Makefile  README-local-setup.md  README.md  Vagrantfile  app__button_8c_source.html  app__button_8h_source.html  app__comms_8c_source.html  app__comms_8h_source.html  app__config_8h.html  app__config_8h.js  app__config_8h_source.html  app__heartbeat_8c.html  app__heartbeat_8c.js  app__heartbeat_8c_source.html  app__heartbeat_8h.html  app__heartbeat_8h.js  app__heartbeat_8h_source.html  app__log_8c_source.html  app__log_8h_source.html  app__sensor_8c.html  app__sensor_8c.js  app__sensor_8c_source.html  app__sensor_8h.html  app__sensor_8h.js  app__sensor_8h_source.html  docker_build.bat  docker_build.sh  globals.html  globals_defs.html  globals_func.html  group___s_d_k15.html  group___s_d_k15.js  group__app__button.html  group__app__comms.html  group__app__log.html  group__app__sensor.html  group__main.html  index.html  (+9 more)
src/ruuvi.boards.c/: CMakeLists.txt  README.md  custom_board.h  ruuvi_board_defaults.h  ruuvi_board_gateway.h  ruuvi_board_gwesp.h  ruuvi_board_gwnrf.h  ruuvi_board_kaarle.h  ruuvi_board_kalervo.h  ruuvi_board_keijo.h  ruuvi_board_pca10040.h  ruuvi_board_pca10056e.h  ruuvi_board_pca10059.h  ruuvi_board_rauno.h  ruuvi_board_ruuvitag_b.h  ruuvi_boards.h
src/ruuvi.endpoints.c/: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  Doxyfile  Makefile  PVS-Studio.cfg  README.md  component.mk  project.yml  sonar-project.properties
src/ruuvi.endpoints.c/src/: ruuvi_endpoints.h
src/ruuvi.endpoints.c/test/: test_ruuvi_endpoint_3.c  (+4 more)
(+308 files in other folders)
